[project]
name = "prompt-optimization-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets==3.6.0",
    "langchain-openai>=1.1.10",
    "mlflow>=3.9.0",
    "prompt-optimizer",
    "pydantic-yaml>=1.6.0",
    "python-dotenv>=1.2.1",
]

[tool.uv.sources]
prompt-optimizer = { git = "https://github.com/taagarwa-rh/prompt-optimizer.git" }

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "D", "C", "N"]
ignore = [
    "E501", # line-too-long
    "E402", # module-import-not-at-top-file
    "D203", # one-blank-line-before-class
    "D212", # multi-line-summary-first-line
    "D100", # undocumented-public-module
    "D413",
]
per-file-ignores = { "tests/*" = ["D"] }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.11.13",
]
